--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "pg": "^7.4.3",
     "rajaongkir-nodejs": "^0.1.12",
     "sequelize": "^4.39.0"
